techs, "food-o-mat", minor fixes

--- a/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
+++ b/Resources/Prototypes/Recipes/Cooking/meal_recipes.yml
@@ -1060,7 +1060,6 @@
   solids:
     FoodMeatSnail: 1
   recipeType: # Frontier
-  - Oven # Frontier
   - Microwave # Frontier
 
 - type: microwaveMealRecipe
@@ -1646,7 +1645,7 @@
     UncookedAnimalProteins: 6
   solids:
     FoodDoughSlice: 3
-  recipeType: Oven # Frontier
+  recipeType: Microwave # Frontier
 
 - type: microwaveMealRecipe
   id: RecipeBrownies
