--- a/Resources/Prototypes/_NF/Entities/Objects/Devices/production.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Devices/production.yml
@@ -211,6 +211,7 @@
   id: PortableGeneratorHyperPacmanMachineCircuitboard
   parent: BaseMachineCircuitboard
   name: H.Y.P.E.R.P.A.C.M.A.N.-type portable generator machine board
+  description: A machine printed circuit board for a shredder.
   components:
     - type: Sprite
       state: engineering
@@ -232,6 +233,7 @@
   id: BlueprintLithographMachineCircuitboard
   parent: BaseMachineCircuitboard
   name: blueprint lithograph machine board
+  description: A machine printed circuit board for a blueprint lithograph.
   components:
   - type: Sprite
     state: science
@@ -249,6 +251,7 @@
   id: ElectricRangeMachineCircuitboard
   parent: BaseMachineCircuitboard
   name: electric range machine board
+  description: A machine printed circuit board for an electric range.
   components:
     - type: Sprite
       state: service
@@ -264,7 +267,8 @@
 - type: entity
   id: KitchenAssemblerMachineCircuitboard
   parent: BaseMachineCircuitboard
-  name: assembler machine board
+  name: food-o-mat machine board
+  description: A machine printed circuit board for a Food-O-Mat, suitable for a kitchen.
   components:
     - type: Sprite
       state: service
@@ -280,6 +284,7 @@
   id: MedicalAssemblerMachineCircuitboard
   parent: BaseMachineCircuitboard
   name: medical assembler machine board
+  description: A machine printed circuit board for a medical assembler.
   components:
     - type: Sprite
       state: medical
@@ -297,6 +302,7 @@
   id: MaterialReclaimerMachineCircuitboard
   parent: BaseMachineCircuitboard
   name: material reclaimer machine board
+  description: A machine printed circuit board for a material reclaimer.
   components:
     - type: Sprite
       state: supply
