--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/microwave_recipe_assemblers.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/microwave_recipe_assemblers.yml
@@ -127,8 +127,8 @@
 - type: entity
   id: KitchenAssembler
   parent: KitchenMicrowave
-  name: assembler
-  description: Great for salads, apparently. You don't know how it works.
+  name: food-o-mat
+  description: Assembles and prepares NT-approved meals. You don't know what it's doing in there.
   components:
   - type: Microwave
     explosionChance: 0
