--- a/Resources/Maps/_NF/Shuttles/caduceus.yml
+++ b/Resources/Maps/_NF/Shuttles/caduceus.yml
@@ -1329,10 +1329,16 @@ entities:
         fuelSlot: !type:ContainerSlot
           showEnts: False
           occludes: True
-          ent: null
+          ent: 113
 - proto: AmeJar
   entities:
   - uid: 40
+    components:
+    - type: Transform
+      parent: 314
+    - type: Physics
+      canCollide: False
+  - uid: 113
     components:
     - type: Transform
       parent: 314
@@ -1449,9 +1455,9 @@ entities:
       rot: -1.5707963267948966 rad
       pos: 10.5,-13.5
       parent: 1
-- proto: AtmosDeviceFanTiny
+- proto: AtmosDeviceFanDirectional
   entities:
-  - uid: 113
+  - uid: 454
     components:
     - type: Transform
       pos: 15.5,-17.5
@@ -1459,14 +1465,14 @@ entities:
   - uid: 1093
     components:
     - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: 9.5,4.5
+      rot: 1.5707963267948966 rad
+      pos: 9.5,6.5
       parent: 1
   - uid: 1094
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
-      pos: 9.5,6.5
+      pos: -8.5,6.5
       parent: 1
   - uid: 1095
     components:
@@ -1477,25 +1483,23 @@ entities:
   - uid: 1096
     components:
     - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: -8.5,6.5
+      pos: -0.5,-17.5
       parent: 1
   - uid: 1097
     components:
     - type: Transform
-      rot: -1.5707963267948966 rad
       pos: 1.5,-17.5
       parent: 1
   - uid: 1098
     components:
     - type: Transform
-      rot: -1.5707963267948966 rad
-      pos: -0.5,-17.5
+      pos: -14.5,-17.5
       parent: 1
-  - uid: 1381
+  - uid: 1122
     components:
     - type: Transform
-      pos: -14.5,-17.5
+      rot: 1.5707963267948966 rad
+      pos: 9.5,4.5
       parent: 1
 - proto: BannerMedical
   entities:
@@ -6966,6 +6970,14 @@ entities:
     components:
     - type: Transform
       pos: 2.5,8.5
+      parent: 1
+- proto: LockerWallMaterialsFuelAmeJarFilled
+  entities:
+  - uid: 1147
+    components:
+    - type: Transform
+      rot: 3.141592653589793 rad
+      pos: -11.5,-17.5
       parent: 1
 - proto: LockerWallMedical
   entities:
