--- a/Resources/Prototypes/_NF/Entities/Clothing/Head/softsuit-helmets.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/Head/softsuit-helmets.yml
@@ -72,18 +72,22 @@
   categories: [ HideSpawnMenu ]
   components:
   - type: Sprite
-    sprite: _NF/Clothing/Head/Helmets/eva_hydro.rsi
+    sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
     layers:
-    - state: icon
-    - state: light-overlay
-      visible: false
-      shader: unshaded
-      map: [ "light" ]
+    - state: icon-base
+      color: "#5fa31e"
+    - state: icon-reinforced-points
+      color: "#6b4600"
+    - state: icon-visor
   - type: Clothing
-    sprite: _NF/Clothing/Head/Helmets/eva_hydro.rsi
+    sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
     clothingVisuals:
       head:
-      - state: equipped-HELMET
+      - state: equipped-head-base
+        color: "#5fa31e"
+      - state: equipped-head-reinforced-points
+        color: "#6b4600"
+      - state: equipped-head-visor
 
 - type: entity
   parent: ClothingHeadEVAHelmetWithLightBase
@@ -92,18 +96,22 @@
   categories: [ HideSpawnMenu ]
   components:
   - type: Sprite
-    sprite: _NF/Clothing/Head/Helmets/eva_mailman.rsi
+    sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
     layers:
-    - state: icon
-    - state: light-overlay
-      visible: false
-      shader: unshaded
-      map: [ "light" ]
+    - state: icon-base
+      color: "#4960ed"
+    - state: icon-reinforced-points
+      color: "#3e3e48"
+    - state: icon-visor
   - type: Clothing
-    sprite: _NF/Clothing/Head/Helmets/eva_mailman.rsi
+    sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
     clothingVisuals:
       head:
-      - state: equipped-HELMET
+      - state: equipped-head-base
+        color: "#4960ed"
+      - state: equipped-head-reinforced-points
+        color: "#3e3e48"
+      - state: equipped-head-visor
 
 # COLORED DEPARTMENTAL
 ## CONTRACTORS
