--- a/Resources/Prototypes/_NF/Entities/Clothing/OuterClothing/softsuits.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/OuterClothing/softsuits.yml
@@ -36,9 +36,44 @@
   description: An EVA suit with a built-in helmet commonly issued to hydroponics workers.
   components:
   - type: Sprite
-    sprite: _NF/Clothing/OuterClothing/Suits/eva_hydro.rsi
+    sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
+    layers:
+    - state: icon-base
+      color: "#5fa31e"
+    - state: icon-decals-01
+      color: "#3164ff"
+    - state: icon-reinforced-points
+      color: "#6b4600"
+    - state: icon-breathing-gear
+  - type: Item
+    inhandVisuals:
+      left:
+      - state: inhand-left-base
+        color: "#5fa31e"
+      - state: inhand-left-decals-01
+        color: "#3164ff"
+      - state: inhand-left-reinforced-points
+        color: "#6b4600"
+      - state: inhand-left-breathing-gear
+      right:
+      - state: inhand-right-base
+        color: "#5fa31e"
+      - state: inhand-right-decals-01
+        color: "#3164ff"
+      - state: inhand-right-reinforced-points
+        color: "#6b4600"
+      - state: inhand-right-breathing-gear
   - type: Clothing
-    sprite: _NF/Clothing/OuterClothing/Suits/eva_hydro.rsi
+    sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
+    clothingVisuals:
+      outerClothing:
+      - state: equipped-base
+        color: "#5fa31e"
+      - state: equipped-decals-01
+        color: "#3164ff"
+      - state: equipped-reinforced-points
+        color: "#6b4600"
+      - state: equipped-breathing-gear
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetHydro
     slot: head
@@ -53,9 +88,44 @@
   description: An EVA suit with a built-in helmet commonly issued to hydroponics workers.
   components:
   - type: Sprite
-    sprite: _NF/Clothing/OuterClothing/Suits/eva_mailman.rsi
+    sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
+    layers:
+    - state: icon-base
+      color: "#4960ed"
+    - state: icon-decals-01
+      color: "#b3b3b3"
+    - state: icon-reinforced-points
+      color: "#3e3e48"
+    - state: icon-breathing-gear
+  - type: Item
+    inhandVisuals:
+      left:
+      - state: inhand-left-base
+        color: "#4960ed"
+      - state: inhand-left-decals-01
+        color: "#b3b3b3"
+      - state: inhand-left-reinforced-points
+        color: "#3e3e48"
+      - state: inhand-left-breathing-gear
+      right:
+      - state: inhand-right-base
+        color: "#4960ed"
+      - state: inhand-right-decals-01
+        color: "#b3b3b3"
+      - state: inhand-right-reinforced-points
+        color: "#3e3e48"
+      - state: inhand-right-breathing-gear
   - type: Clothing
-    sprite: _NF/Clothing/OuterClothing/Suits/eva_mailman.rsi
+    sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
+    clothingVisuals:
+      outerClothing:
+      - state: equipped-base
+        color: "#4960ed"
+      - state: equipped-decals-01
+        color: "#b3b3b3"
+      - state: equipped-reinforced-points
+        color: "#3e3e48"
+      - state: equipped-breathing-gear
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetMailman
     slot: head
