Fix ATM slot name

--- a/Resources/Maps/_NF/Shuttles/caduceus.yml
+++ b/Resources/Maps/_NF/Shuttles/caduceus.yml
@@ -4116,7 +4116,7 @@ entities:
           showEnts: False
           occludes: True
           ents: []
-        bankATM-cashSlot: !type:ContainerSlot
+        bank-ATM-cashSlot: !type:ContainerSlot
           showEnts: False
           occludes: True
           ent: null
