fixed helmet reinf layer, added unshaded layer to suits

--- a/Resources/Prototypes/_NF/Entities/Clothing/OuterClothing/softsuits.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/OuterClothing/softsuits.yml
@@ -45,6 +45,8 @@
     - state: icon-reinforced-points
       color: "#6b4600"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -74,6 +76,8 @@
       - state: equipped-reinforced-points
         color: "#6b4600"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetHydro
     slot: head
@@ -97,6 +101,8 @@
     - state: icon-reinforced-points
       color: "#3e3e48"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -126,6 +132,8 @@
       - state: equipped-reinforced-points
         color: "#3e3e48"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetMailman
     slot: head
@@ -151,6 +159,8 @@
     - state: icon-reinforced-points
       color: "#3e3e48"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -180,6 +190,8 @@
       - state: equipped-reinforced-points
         color: "#3e3e48"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetContractor
     slot: head
@@ -204,6 +216,8 @@
     - state: icon-reinforced-points
       color: "#3e3e48"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -233,6 +247,8 @@
       - state: equipped-reinforced-points
         color: "#3e3e48"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetSr
     slot: head
@@ -256,6 +272,8 @@
     - state: icon-reinforced-points
       color: "#3e3e48"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -285,6 +303,8 @@
       - state: equipped-reinforced-points
         color: "#3e3e48"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetCaptain
     slot: head
@@ -309,6 +329,8 @@
     - state: icon-reinforced-points
       color: "#ff7f00"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -338,6 +360,8 @@
       - state: equipped-reinforced-points
         color: "#ff7f00"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetEngineer
     slot: head
@@ -361,6 +385,8 @@
     - state: icon-reinforced-points
       color: "#ff7f00"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -390,6 +416,8 @@
       - state: equipped-reinforced-points
         color: "#ff7f00"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetAtmosTech
     slot: head
@@ -414,6 +442,8 @@
     - state: icon-reinforced-points
       color: "#3e3e48"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -443,6 +473,8 @@
       - state: equipped-reinforced-points
         color: "#3e3e48"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetCargo
     slot: head
@@ -466,6 +498,8 @@
     - state: icon-reinforced-points
       color: "#786243"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -495,6 +529,8 @@
       - state: equipped-reinforced-points
         color: "#786243"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetSalvage
     slot: head
@@ -519,6 +555,8 @@
     - state: icon-reinforced-points
       color: "#3e3e48"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -548,6 +586,8 @@
       - state: equipped-reinforced-points
         color: "#3e3e48"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetMedic
     slot: head
@@ -572,6 +612,8 @@
     - state: icon-reinforced-points
       color: "#606275"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -601,6 +643,8 @@
       - state: equipped-reinforced-points
         color: "#606275"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetScientist
     slot: head
@@ -625,6 +669,8 @@
     - state: icon-reinforced-points
       color: "#ebdc36"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -654,6 +700,8 @@
       - state: equipped-reinforced-points
         color: "#ebdc36"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetJanitor
     slot: head
@@ -677,6 +725,8 @@
     - state: icon-reinforced-points
       color: "#606275"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -706,6 +756,8 @@
       - state: equipped-reinforced-points
         color: "#606275"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetServiceWorker
     slot: head
@@ -729,6 +781,8 @@
     - state: icon-reinforced-points
       color: "#3e3e48"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -758,6 +812,8 @@
       - state: equipped-reinforced-points
         color: "#3e3e48"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetChaplain
     slot: head
@@ -782,6 +838,8 @@
     - state: icon-decals-02-boxer
       color: "#d1502c"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -811,6 +869,8 @@
       - state: equipped-decals-02-boxer
         color: "#d1502c"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetBoxerRed
     slot: head
@@ -834,6 +894,8 @@
     - state: icon-decals-02-boxer
       color: "#4cd339"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -863,6 +925,8 @@
       - state: equipped-decals-02-boxer
         color: "#4cd339"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetBoxerGreen
     slot: head
@@ -886,6 +950,8 @@
     - state: icon-decals-02-boxer
       color: "#23a0bb"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -915,6 +981,8 @@
       - state: equipped-decals-02-boxer
         color: "#23a0bb"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetBoxerBlue
     slot: head
@@ -938,6 +1006,8 @@
     - state: icon-decals-02-boxer
       color: "#d9be15"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -967,6 +1037,8 @@
       - state: equipped-decals-02-boxer
         color: "#d9be15"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetBoxerYellow
     slot: head
@@ -990,6 +1062,8 @@
     - state: equipped-decals-02-boxer
       map: [ "eva_decal_boxing" ]
     - state: equipped-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -1021,6 +1095,8 @@
       - state: inhand-right-reinforced-points
         color: "#606275"
       - state: inhand-right-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetBoxerRandom
     slot: head
@@ -1045,6 +1121,8 @@
     - state: icon-reinforced-points
       color: "#784f1e"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -1074,6 +1152,8 @@
       - state: equipped-reinforced-points
         color: "#784f1e"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetPilot
     slot: head
@@ -1097,6 +1177,8 @@
     - state: icon-reinforced-points
       color: "#3e3e48"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -1126,6 +1208,8 @@
       - state: equipped-reinforced-points
         color: "#3e3e48"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetMercenary
     slot: head
@@ -1149,6 +1233,8 @@
     - state: icon-reinforced-points
       color: "#935c3f"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -1178,6 +1264,8 @@
       - state: equipped-reinforced-points
         color: "#935c3f"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetPrivateSec
     slot: head
@@ -1202,6 +1290,8 @@
     - state: icon-reinforced-points
       color: "#493926"
     - state: icon-breathing-gear
+    - state: icon-unshaded
+      shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -1231,6 +1321,8 @@
       - state: equipped-reinforced-points
         color: "#493926"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetNfsd
     slot: head
@@ -1258,6 +1350,8 @@
         state: decor_base_OuterClothing_armor_06
         color: "#e48545"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: Item
     inhandVisuals:
       left:
@@ -1316,6 +1410,8 @@
         state: decor_base_OuterClothing_armor_02
         color: "#8f1717"
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
       - sprite: _NF/Clothing/OuterClothing/Armor/bulletproof_vest_procedural.rsi
         state: decor_base_OuterClothing_armor_05
         color: "#8f1717"
