inhand unshaded layer

--- a/Resources/Prototypes/_NF/Entities/Clothing/OuterClothing/softsuits.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/OuterClothing/softsuits.yml
@@ -57,6 +57,8 @@
       - state: inhand-left-reinforced-points
         color: "#6b4600"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#5fa31e"
@@ -65,6 +67,8 @@
       - state: inhand-right-reinforced-points
         color: "#6b4600"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -113,6 +117,8 @@
       - state: inhand-left-reinforced-points
         color: "#3e3e48"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#4960ed"
@@ -121,6 +127,8 @@
       - state: inhand-right-reinforced-points
         color: "#3e3e48"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -171,6 +179,8 @@
       - state: inhand-left-reinforced-points
         color: "#3e3e48"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#fff4e2"
@@ -179,6 +189,8 @@
       - state: inhand-right-reinforced-points
         color: "#3e3e48"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -228,6 +240,8 @@
       - state: inhand-left-reinforced-points
         color: "#3e3e48"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#194214"
@@ -236,6 +250,8 @@
       - state: inhand-right-reinforced-points
         color: "#3e3e48"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -284,6 +300,8 @@
       - state: inhand-left-reinforced-points
         color: "#3e3e48"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#3a6781"
@@ -292,6 +310,8 @@
       - state: inhand-right-reinforced-points
         color: "#3e3e48"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -341,6 +361,8 @@
       - state: inhand-left-reinforced-points
         color: "#ff7f00"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#ffee00"
@@ -349,6 +371,8 @@
       - state: inhand-right-reinforced-points
         color: "#ff7f00"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -397,6 +421,8 @@
       - state: inhand-left-reinforced-points
         color: "#ff7f00"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#ffee00"
@@ -405,6 +431,8 @@
       - state: inhand-right-reinforced-points
         color: "#ff7f00"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -454,6 +482,8 @@
       - state: inhand-left-reinforced-points
         color: "#3e3e48"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#deb733"
@@ -462,6 +492,8 @@
       - state: inhand-right-reinforced-points
         color: "#3e3e48"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -510,6 +542,8 @@
       - state: inhand-left-reinforced-points
         color: "#786243"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#deb733"
@@ -518,6 +552,8 @@
       - state: inhand-right-reinforced-points
         color: "#786243"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -567,6 +603,8 @@
       - state: inhand-left-reinforced-points
         color: "#3e3e48"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#5a96bb"
@@ -575,6 +613,8 @@
       - state: inhand-right-reinforced-points
         color: "#3e3e48"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -624,6 +664,8 @@
       - state: inhand-left-reinforced-points
         color: "#606275"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#edeaea"
@@ -632,6 +674,8 @@
       - state: inhand-right-reinforced-points
         color: "#606275"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -681,6 +725,8 @@
       - state: inhand-left-reinforced-points
         color: "#ebdc36"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#cac4c3"
@@ -689,6 +735,8 @@
       - state: inhand-right-reinforced-points
         color: "#ebdc36"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -737,6 +785,8 @@
       - state: inhand-left-reinforced-points
         color: "#606275"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#fff4e2"
@@ -745,6 +795,8 @@
       - state: inhand-right-reinforced-points
         color: "#606275"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -793,6 +845,8 @@
       - state: inhand-left-reinforced-points
         color: "#3e3e48"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#3e3e48"
@@ -801,6 +855,8 @@
       - state: inhand-right-reinforced-points
         color: "#3e3e48"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -827,6 +883,7 @@
   id: ClothingOuterEVASuitBoxerRed
   name: boxer EVA suit
   description: An EVA suit with a built-in helmet commonly issued to boxers in the red corner.
+  suffix: Red
   components:
   - type: Sprite
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
@@ -850,6 +907,8 @@
       - state: inhand-left-reinforced-points
         color: "#606275"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#fff4e2"
@@ -858,6 +917,8 @@
       - state: inhand-right-reinforced-points
         color: "#606275"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -883,6 +944,7 @@
   id: ClothingOuterEVASuitBoxerGreen
   name: boxer EVA suit
   description: An EVA suit with a built-in helmet commonly issued to boxers in the green corner.
+  suffix: Green
   components:
   - type: Sprite
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
@@ -906,6 +968,8 @@
       - state: inhand-left-reinforced-points
         color: "#606275"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#fff4e2"
@@ -914,6 +978,8 @@
       - state: inhand-right-reinforced-points
         color: "#606275"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -939,6 +1005,7 @@
   id: ClothingOuterEVASuitBoxerBlue
   name: boxer EVA suit
   description: An EVA suit with a built-in helmet commonly issued to boxers in the blue corner.
+  suffix: Blue
   components:
   - type: Sprite
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
@@ -962,6 +1029,8 @@
       - state: inhand-left-reinforced-points
         color: "#606275"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#fff4e2"
@@ -970,6 +1039,8 @@
       - state: inhand-right-reinforced-points
         color: "#606275"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -995,6 +1066,7 @@
   id: ClothingOuterEVASuitBoxerYellow
   name: boxer EVA suit
   description: An EVA suit with a built-in helmet commonly issued to boxers in the yellow corner.
+  suffix: Yellow
   components:
   - type: Sprite
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
@@ -1018,6 +1090,8 @@
       - state: inhand-left-reinforced-points
         color: "#606275"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#fff4e2"
@@ -1026,6 +1100,8 @@
       - state: inhand-right-reinforced-points
         color: "#606275"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -1051,6 +1127,7 @@
   id: ClothingOuterEVASuitBoxerRandom
   name: boxer EVA suit
   description: An EVA suit with a built-in helmet commonly issued to boxers in the random corner.
+  suffix: Randomized colors
   components:
   - type: Sprite
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
@@ -1062,7 +1139,7 @@
     - state: equipped-decals-02-boxer
       map: [ "eva_decal_boxing" ]
     - state: equipped-breathing-gear
-    - state: icon-unshaded
+    - state: equipped-unshaded
       shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
@@ -1075,6 +1152,8 @@
       - state: equipped-decals-02-boxer
         map: [ "eva_decal_boxing" ]
       - state: equipped-breathing-gear
+      - state: equipped-unshaded
+        shader: unshaded
   - type: RandomSprite
     available:
     - eva_decal_boxing:
@@ -1088,6 +1167,8 @@
       - state: inhand-left-reinforced-points
         color: "#606275"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#fff4e2"
@@ -1095,7 +1176,7 @@
       - state: inhand-right-reinforced-points
         color: "#606275"
       - state: inhand-right-breathing-gear
-      - state: equipped-unshaded
+      - state: inhand-right-unshaded
         shader: unshaded
   - type: ToggleableClothing
     clothingPrototype: ClothingHeadEVAHelmetBoxerRandom
@@ -1133,6 +1214,8 @@
       - state: inhand-left-reinforced-points
         color: "#784f1e"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#496ea0"
@@ -1141,6 +1224,8 @@
       - state: inhand-right-reinforced-points
         color: "#784f1e"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -1189,6 +1274,8 @@
       - state: inhand-left-reinforced-points
         color: "#3e3e48"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#7b7b3f"
@@ -1197,6 +1284,8 @@
       - state: inhand-right-reinforced-points
         color: "#3e3e48"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -1245,6 +1334,8 @@
       - state: inhand-left-reinforced-points
         color: "#935c3f"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#2286bd"
@@ -1253,6 +1344,8 @@
       - state: inhand-right-reinforced-points
         color: "#935c3f"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -1302,6 +1395,8 @@
       - state: inhand-left-reinforced-points
         color: "#493926"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#a9947d"
@@ -1310,6 +1405,8 @@
       - state: inhand-right-reinforced-points
         color: "#493926"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -1362,6 +1459,8 @@
       - state: inhand-left-reinforced-points
         color: "#3e3e48"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#283846"
@@ -1370,6 +1469,8 @@
       - state: inhand-right-reinforced-points
         color: "#3e3e48"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
@@ -1425,6 +1526,8 @@
       - state: inhand-left-reinforced-points
         color: "#3e3e48"
       - state: inhand-left-breathing-gear
+      - state: inhand-left-unshaded
+        shader: unshaded
       right:
       - state: inhand-right-base
         color: "#ffffff"
@@ -1433,6 +1536,8 @@
       - state: inhand-right-reinforced-points
         color: "#3e3e48"
       - state: inhand-right-breathing-gear
+      - state: inhand-right-unshaded
+        shader: unshaded
   - type: Clothing
     sprite: _NF/Clothing/OuterClothing/Suits/eva_color.rsi
     clothingVisuals:
