--- a/Resources/Prototypes/_NF/Entities/Clothing/Head/softsuit-helmets.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/Head/softsuit-helmets.yml
@@ -79,6 +79,7 @@
     - state: icon-reinforced-points
       color: "#6b4600"
     - state: icon-visor
+      color: "#adcfd5"
   - type: Clothing
     sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
     clothingVisuals:
@@ -88,6 +89,7 @@
       - state: equipped-head-reinforced-points
         color: "#6b4600"
       - state: equipped-head-visor
+        color: "#adcfd5"
 
 - type: entity
   parent: ClothingHeadEVAHelmetWithLightBase
@@ -103,6 +105,7 @@
     - state: icon-reinforced-points
       color: "#3e3e48"
     - state: icon-visor
+      color: "#adcfd5"
   - type: Clothing
     sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
     clothingVisuals:
@@ -112,6 +115,7 @@
       - state: equipped-head-reinforced-points
         color: "#3e3e48"
       - state: equipped-head-visor
+        color: "#adcfd5"
 
 # COLORED DEPARTMENTAL
 ## CONTRACTORS
@@ -129,6 +133,7 @@
     - state: icon-reinforced-points
       color: "#3e3e48"
     - state: icon-visor
+      color: "#adcfd5"
   - type: Clothing
     sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
     clothingVisuals:
@@ -138,6 +143,7 @@
       - state: equipped-head-reinforced-points
         color: "#3e3e48"
       - state: equipped-head-visor
+        color: "#adcfd5"
 
 ## COMMAND
 - type: entity
@@ -221,6 +227,7 @@
     - state: icon-reinforced-points
       color: "#ff7f00"
     - state: icon-visor
+      color: "#adcfd5"
   - type: Clothing
     sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
     clothingVisuals:
@@ -230,6 +237,7 @@
       - state: equipped-head-reinforced-points
         color: "#ff7f00"
       - state: equipped-head-visor
+        color: "#adcfd5"
 
 - type: entity
   parent: ClothingHeadEVAHelmetWithLightBase
@@ -274,6 +282,7 @@
     - state: icon-reinforced-points
       color: "#3e3e48"
     - state: icon-visor
+      color: "#adcfd5"
   - type: Clothing
     sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
     clothingVisuals:
@@ -283,6 +292,7 @@
       - state: equipped-head-reinforced-points
         color: "#3e3e48"
       - state: equipped-head-visor
+        color: "#adcfd5"
 
 - type: entity
   parent: ClothingHeadEVAHelmetWithLightBase
@@ -298,6 +308,7 @@
     - state: icon-reinforced-points
       color: "#ad2aea"
     - state: icon-visor
+      color: "#adcfd5"
   - type: Clothing
     sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
     clothingVisuals:
@@ -307,6 +318,7 @@
       - state: equipped-head-reinforced-points
         color: "#ad2aea"
       - state: equipped-head-visor
+        color: "#adcfd5"
   - type: PointLight
     radius: 6
 
@@ -325,6 +337,7 @@
     - state: icon-reinforced-points
       color: "#5a96bb"
     - state: icon-visor
+      color: "#adcfd5"
   - type: Clothing
     sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
     clothingVisuals:
@@ -334,6 +347,7 @@
       - state: equipped-head-reinforced-points
         color: "#5a96bb"
       - state: equipped-head-visor
+        color: "#adcfd5"
   - type: PointLight
     color: "#adf1ff"
 
@@ -409,6 +423,7 @@
     - state: icon-reinforced-points
       color: "#606275"
     - state: icon-visor
+      color: "#adcfd5"
   - type: Clothing
     sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
     clothingVisuals:
@@ -418,6 +433,7 @@
       - state: equipped-head-reinforced-points
         color: "#606275"
       - state: equipped-head-visor
+        color: "#adcfd5"
 
 - type: entity
   parent: ClothingHeadEVAHelmetWithLightBase
@@ -461,6 +477,7 @@
     - state: icon-reinforced-points
       color: "#606275"
     - state: icon-visor
+      color: "#adcfd5"
   - type: Clothing
     sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
     clothingVisuals:
@@ -470,6 +487,7 @@
       - state: equipped-head-reinforced-points
         color: "#606275"
       - state: equipped-head-visor
+        color: "#adcfd5"
 
 - type: entity
   parent: ClothingHeadEVAHelmetWithLightBase
@@ -485,6 +503,7 @@
     - state: icon-reinforced-points
       color: "#606275"
     - state: icon-visor
+      color: "#adcfd5"
   - type: Clothing
     sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
     clothingVisuals:
@@ -494,6 +513,7 @@
       - state: equipped-head-reinforced-points
         color: "#606275"
       - state: equipped-head-visor
+        color: "#adcfd5"
 
 - type: entity
   parent: ClothingHeadEVAHelmetWithLightBase
@@ -509,6 +529,7 @@
     - state: icon-reinforced-points
       color: "#606275"
     - state: icon-visor
+      color: "#adcfd5"
   - type: Clothing
     sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
     clothingVisuals:
@@ -518,6 +539,7 @@
       - state: equipped-head-reinforced-points
         color: "#606275"
       - state: equipped-head-visor
+        color: "#adcfd5"
 
 - type: entity
   parent: ClothingHeadEVAHelmetWithLightBase
@@ -533,6 +555,7 @@
     - state: icon-reinforced-points
       color: "#606275"
     - state: icon-visor
+      color: "#adcfd5"
   - type: Clothing
     sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
     clothingVisuals:
@@ -542,6 +565,7 @@
       - state: equipped-head-reinforced-points
         color: "#606275"
       - state: equipped-head-visor
+        color: "#adcfd5"
 
 - type: entity
   parent: ClothingHeadEVAHelmetWithLightBase
@@ -557,6 +581,7 @@
     - state: equipped-head-reinforced-points
       color: "#606275"
     - state: equipped-head-visor
+      color: "#adcfd5"
   - type: Clothing
     sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
     clothingVisuals:
@@ -566,6 +591,7 @@
       - state: equipped-head-reinforced-points
         color: "#606275"
       - state: equipped-head-visor
+        color: "#adcfd5"
   - type: RandomSprite
     available:
       - EVA_helmet_decal_boxing:
@@ -586,6 +612,7 @@
     - state: icon-reinforced-points
       color: "#784f1e"
     - state: icon-visor
+      color: "#adcfd5"
   - type: Clothing
     sprite: _NF/Clothing/Head/Helmets/eva_color.rsi
     clothingVisuals:
@@ -595,6 +622,7 @@
       - state: equipped-head-reinforced-points
         color: "#784f1e"
       - state: equipped-head-visor
+        color: "#adcfd5"
 
 - type: entity
   parent: ClothingHeadEVAHelmetWithLightBase
